--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,15 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm:cli": "ts-node ./node_modules/typeorm/cli",
-    "migrate:generate:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli -d ./src/migrations/configs migration:generate",
-    "migrate:create:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli -d ./src/migrations/configs migration:create",
-    "migrate:run:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli migration:run -d ./src/migrations/configs",
-    "migrate:revert:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli migration:revert -d ./src/migrations/configs",
-    "migrate:show:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli migration:show -d ./src/migrations/configs"
+    "migrate:generate:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli -d ./src/datasource/configs migration:generate",
+    "migrate:create:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli -d ./src/datasource/configs migration:create",
+    "migrate:run:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli migration:run -d ./src/datasource/configs",
+    "migrate:revert:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli migration:revert -d ./src/datasource/configs",
+    "migrate:show:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli migration:show -d ./src/datasource/configs",
+    "seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-extension/dist/cli.js seed -d src/datasource/index.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "8.4.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -43,7 +45,7 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "typeorm": "^0.3.26",
-    "typeorm-seeding": "^1.6.1",
+    "typeorm-extension": "2.8.1",
     "typeorm-transactional": "^0.5.0"
   },
   "devDependencies": {
