--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "SET NODE_ENV=development&&nest start --watch --inspect",
     "start:debug": "SET NODE_ENV=development&&nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=production&&node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm:cli": "ts-node ./node_modules/typeorm/cli",
     "migrate:generate:dev": "npx dotenv -e ./.env.development -- yarn typeorm:cli -d ./src/datasource/configs migration:generate",
