feat: implement conversation repository cache with Redis integration

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -17,4 +17,14 @@ JWT_EXPIRATION_TIME=3600000 # 1000 hours
 BCRYPT_SALT_ROUNDS=12
 
 #RabbitMQ
-RABBITMQ_URL=amqp://localhost:5672
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=secret123
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+QUEUE_CHAT=chat-service-queue
+
+#Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=admin
+
