--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@faker-js/faker": "8.4.1",
     "@golevelup/nestjs-rabbitmq": "^6.0.2",
+    "@liaoliaots/nestjs-redis": "^10.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -39,6 +40,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "ioredis": "^5.8.1",
     "joi": "^18.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
